Bug LOGCXX-133: Missing parenthesis in LOG4CXX_ASSERT macro